--- a/src/app.css
+++ b/src/app.css
@@ -1,17 +1,14 @@
-
-
 :root {
   --bg: #f8f8ff;
-  --x: #0F1419;
+  --x: #0f1419;
   --facebook: #1877f2;
-  --github: #24292E;
+  --github: #24292e;
   --instagram: #e4405f;
-  --linkedin: #0177B5;
+  --linkedin: #0177b5;
 }
 
 body {
-  font-family: 'Poppins', 
-      sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: var(--bg);
   display: flex;
   justify-content: center;
@@ -47,12 +44,8 @@ body {
   align-items: center;
   flex-direction: column;
   cursor: pointer;
-  box-shadow: 0 10px 10px 
-      rgba(0, 0, 0, 0.1);
-  transition: all 0.2s 
-      cubic-bezier(
-          0.68, -0.55, 0.265, 1.55
-      );
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .wrapper .tooltip {
@@ -65,28 +58,23 @@ body {
   border-radius: 5px;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.2s 
-      cubic-bezier(
-          0.68, -0.55, 0.265, 1.55
-      );
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .wrapper .tooltip::before {
   position: absolute;
-  content: "";
+  content: '';
   height: 8px;
   width: 8px;
   background: #fff;
   bottom: -3px;
   left: 50%;
   transform: translate(-50%) rotate(45deg);
-  transition: all 0.2s 
-      cubic-bezier(
-          0.68, -0.55, 0.265, 1.55
-      );
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-.wrapper .icon:hover .tooltip {
+.wrapper .icon:hover .tooltip,
+.wrapper .icon.hover .tooltip {
   top: -45px;
   opacity: 1;
   visibility: visible;
@@ -94,42 +82,58 @@ body {
 }
 
 .wrapper .icon:hover span,
-.wrapper .icon:hover .tooltip {
-  text-shadow: 0px -1px 
-      0px rgba(0, 0, 0, 0.1);
+.wrapper .icon:hover .tooltip,
+.wrapper .icon.hover span,
+.wrapper .icon.hover .tooltip {
+  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper .facebook:hover,
 .wrapper .facebook:hover .tooltip,
-.wrapper .facebook:hover .tooltip::before {
+.wrapper .facebook:hover .tooltip::before,
+.wrapper .facebook.hover,
+.wrapper .facebook.hover .tooltip,
+.wrapper .facebook.hover .tooltip::before {
   background: var(--facebook);
   color: #fff;
 }
 
 .wrapper .x:hover,
 .wrapper .x:hover .tooltip,
-.wrapper .x:hover .tooltip::before {
+.wrapper .x:hover .tooltip::before,
+.wrapper .x.hover,
+.wrapper .x.hover .tooltip,
+.wrapper .x.hover .tooltip::before {
   background: var(--x);
   color: #fff;
 }
 
 .wrapper .github:hover,
 .wrapper .github:hover .tooltip,
-.wrapper .github:hover .tooltip::before {
+.wrapper .github:hover .tooltip::before,
+.wrapper .github.hover,
+.wrapper .github.hover .tooltip,
+.wrapper .github.hover .tooltip::before {
   background: var(--github);
   color: #fff;
 }
 
 .wrapper .instagram:hover,
 .wrapper .instagram:hover .tooltip,
-.wrapper .instagram:hover .tooltip::before {
+.wrapper .instagram:hover .tooltip::before,
+.wrapper .instagram.hover,
+.wrapper .instagram.hover .tooltip,
+.wrapper .instagram.hover .tooltip::before {
   background: var(--instagram);
   color: #fff;
 }
 
 .wrapper .linkedin:hover,
 .wrapper .linkedin:hover .tooltip,
-.wrapper .linkedin:hover .tooltip::before {
+.wrapper .linkedin:hover .tooltip::before,
+.wrapper .linkedin.hover,
+.wrapper .linkedin.hover .tooltip,
+.wrapper .linkedin.hover .tooltip::before {
   background: var(--linkedin);
   color: #fff;
   fill: #fff;
