--- a/src/app.css
+++ b/src/app.css
@@ -74,6 +74,7 @@ body {
 }
 
 .wrapper .icon:hover .tooltip,
+.wrapper .icon:active .tooltip,
 .wrapper .icon.hover .tooltip {
   top: -45px;
   opacity: 1;
@@ -82,15 +83,20 @@ body {
 }
 
 .wrapper .icon:hover span,
+.wrapper .icon:active span,
 .wrapper .icon:hover .tooltip,
+.wrapper .icon:active .tooltip,
 .wrapper .icon.hover span,
 .wrapper .icon.hover .tooltip {
   text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
 
 .wrapper .facebook:hover,
+.wrapper .facebook:active,
 .wrapper .facebook:hover .tooltip,
+.wrapper .facebook:active .tooltip,
 .wrapper .facebook:hover .tooltip::before,
+.wrapper .facebook:active .tooltip::before,
 .wrapper .facebook.hover,
 .wrapper .facebook.hover .tooltip,
 .wrapper .facebook.hover .tooltip::before {
@@ -99,8 +105,11 @@ body {
 }
 
 .wrapper .x:hover,
+.wrapper .x:active,
 .wrapper .x:hover .tooltip,
+.wrapper .x:active .tooltip,
 .wrapper .x:hover .tooltip::before,
+.wrapper .x:active .tooltip::before,
 .wrapper .x.hover,
 .wrapper .x.hover .tooltip,
 .wrapper .x.hover .tooltip::before {
@@ -109,8 +118,11 @@ body {
 }
 
 .wrapper .github:hover,
+.wrapper .github:active,
 .wrapper .github:hover .tooltip,
+.wrapper .github:active .tooltip,
 .wrapper .github:hover .tooltip::before,
+.wrapper .github:active .tooltip::before,
 .wrapper .github.hover,
 .wrapper .github.hover .tooltip,
 .wrapper .github.hover .tooltip::before {
@@ -119,8 +131,11 @@ body {
 }
 
 .wrapper .instagram:hover,
+.wrapper .instagram:active,
 .wrapper .instagram:hover .tooltip,
+.wrapper .instagram:active .tooltip,
 .wrapper .instagram:hover .tooltip::before,
+.wrapper .instagram:active .tooltip::before,
 .wrapper .instagram.hover,
 .wrapper .instagram.hover .tooltip,
 .wrapper .instagram.hover .tooltip::before {
@@ -129,8 +144,11 @@ body {
 }
 
 .wrapper .linkedin:hover,
+.wrapper .linkedin:active,
 .wrapper .linkedin:hover .tooltip,
+.wrapper .linkedin:active .tooltip,
 .wrapper .linkedin:hover .tooltip::before,
+.wrapper .linkedin:active .tooltip::before,
 .wrapper .linkedin.hover,
 .wrapper .linkedin.hover .tooltip,
 .wrapper .linkedin.hover .tooltip::before {
